--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
 body, h1, h3, p, a {
     font-family: 'Poppins', sans-serif;
     color: #333;
-    transition: color 0.3s, background-color 0.3s;
+    transition: color 0.3s, background-color 0.3s ease-in-out;
 }
 
 body.light-mode {
@@ -36,9 +36,19 @@ body.dark-mode {
     margin: auto;
 }
 
+.logo {
+    display: flex;
+}
+
 .logo img {
-    width: 50px; /* Expected image size */
-    margin-right: 10px;
+    width: 50px;
+    margin: auto;
+    padding-right: 15px;
+    padding-top: 20px;
+}
+
+#lm {
+    text-decoration: none;
 }
 
 .nav-links a {
@@ -47,10 +57,44 @@ body.dark-mode {
     margin: 0 15px;
     font-weight: 600;
     transition: color 0.3s;
+    padding-left: 30px;
 }
 
 .nav-links a:hover {
     color: #FFD700;
+}
+
+#hLogin, #hLSignup {
+    font-size: 16px;
+    padding: 10px;
+}
+
+#hLogin {
+    border: 2px solid white;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 8px;
+}
+
+#hLogin:hover {
+    border-color: #FFD700;
+    color: #FFD700;
+    cursor: pointer;
+}
+
+#hLSignup {
+    border: 2px solid white;
+    background-color: white;
+    color: #4CAF50;
+    border-radius: 8px;
+    margin-left: 5px;
+}
+
+#hLSignup:hover {
+    border-color: #FFD700;
+    background-color: #FFD700;
+    color: white;
+    cursor: pointer;
 }
 
 /* Mode Switch */
@@ -63,15 +107,27 @@ body.dark-mode {
     display: none;
 }
 
+/* Show sun icon when the theme toggle is not checked */
+#theme-toggle:not(:checked) + #sun-icon {
+    display: inline-block;
+}
+
+#theme-toggle:not(:checked) ~ #moon-icon {
+    display: none;
+}
+
+/* Show moon icon when the theme toggle is checked */
+#theme-toggle:checked + #sun-icon {
+    display: none;
+}
+
+#theme-toggle:checked ~ #moon-icon {
+    display: inline-block;
+}
+
+/* Set icon color */
 .mode-switch .fa-sun, .mode-switch .fa-moon {
     color: #FFD700;
     font-size: 1.2rem;
-}
-
-#theme-toggle:checked ~ .fa-sun {
-    display: none;
-}
-
-#theme-toggle:not(:checked) ~ .fa-moon {
-    display: none;
+    cursor: pointer;
 }
