--- a/css/footer.css
+++ b/css/footer.css
@@ -22,7 +22,11 @@ body.dark-mode {
 
 .footer {
     background-color: #8B4513;
-    padding: 30px 20px;
+    padding: 20px;
+    color: #FAF3E0;
+}
+
+.footer p {
     color: #FAF3E0;
 }
 
