--- a/css/header.css
+++ b/css/header.css
@@ -18,8 +18,8 @@ body.dark-mode {
 }
 
 .header {
-    background-color: #4CAF50;
-    padding: 10px 20px;
+    background: linear-gradient(to bottom, #4caf4fdd, rgba(76, 175, 79, 0));
+    padding: 5px 20px 2px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,8 +36,21 @@ body.dark-mode {
     margin: auto;
 }
 
+.logo h1 a{
+    color: #fff;
+    text-shadow: 0px 2px 4px 0px rgba(44, 223, 47, 0.53);
+}
+
 .logo {
     display: flex;
+}
+
+.bar {
+    border: 2px solid #fff;
+    background: linear-gradient(to bottom, #4caf4fed, rgba(76, 175, 79, 0));
+    border-radius: 10px;
+    padding-right: 25px ;
+    margin-left: 20px;
 }
 
 .logo img {
@@ -52,7 +65,7 @@ body.dark-mode {
 }
 
 .nav-links a {
-    color: #FAF3E0;
+    color: #fff;
     text-decoration: none;
     margin: 0 15px;
     font-weight: 600;
