--- a/css/login.css
+++ b/css/login.css
@@ -20,15 +20,32 @@ body {
   overflow: hidden;
 }
 
+.login-bg {
+  width: 50%;
+  animation: slideIn 1.4s ease-out forwards;
+}
+
 .login-bg img {
-    max-width: 800px;
+  max-width: 800px;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+/* Keyframes for the animation */
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 .login-form {
-  background-color: #FAF3E0;
+  background-color: #fff;
   padding: 40px 30px;
   display: flex;
   flex-direction: column;
@@ -74,25 +91,25 @@ input:focus {
 }
 
 .show-password-container {
-    display: flex;
-    align-items: center;
-    gap: 5px; /* Spacing between checkbox and label */
-    margin-top: 5px; /* Space between input and checkbox */
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-top: 5px;
 }
-  
+
 .showPwd {
-    font-size: 14px;
-    color: #4CAF50;
-    margin-top: 1.5px;
-    cursor: pointer;
+  font-size: 14px;
+  color: #4CAF50;
+  margin-top: 1.5px;
+  cursor: pointer;
 }
-  
+
 #show-password {
-    cursor: pointer;
-    width: 18px;
-    height: 18px;
+  cursor: pointer;
+  width: 18px;
+  height: 18px;
 }
-  
+
 button {
   background-color: #4CAF50;
   color: white;
