--- a/css/header.css
+++ b/css/header.css
@@ -85,7 +85,7 @@
 }
 
 .header #hLSignup {
-    border: 2px solid white;
+    border: 2px solid #4CAF50;
     background-color: white;
     color: #4CAF50;
     margin-left: 5px;
