--- a/css/customer.css
+++ b/css/customer.css
@@ -126,6 +126,9 @@ h1 {
 .slide:nth-child(3) {
     animation-delay: 8s;
 }
+.slide:nth-child(4) {
+    animation-delay: 12s;
+}
 
 /* Images inside the slides */
 .slide img {
