Dis some changes on admin profiles

--- a/css/admin.css
+++ b/css/admin.css
@@ -54,6 +54,11 @@ body {
     align-items: center;
 }
 
+.sidebar-menu li a{
+    text-decoration: none;
+    color: #fff;
+}
+
 .sidebar-menu li:hover {
     background-color: #3E8E41;
 }
