--- a/css/admin.css
+++ b/css/admin.css
@@ -110,7 +110,7 @@ body {
     margin-top: 30px;
 }
 
-.admin-profile h2 {
+.admin-profile h2, .quickH2 {
     font-size: 24px;
     color: #8B4513;
     margin-bottom: 20px;
@@ -152,6 +152,28 @@ body {
 
 .edit-profile:hover {
     background-color: #3E8E41;
+}
+
+.quick {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    border: none;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    width: 170px;
+    background-color: #4CAF50;
+    cursor: pointer;
+    text-align: center;
+}
+
+.card a, .card i {
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
 }
 
 /* Animations */
