--- a/css/admin.css
+++ b/css/admin.css
@@ -171,15 +171,14 @@ body {
     transition: transform 1s ease;
 }
 
-.card a, .card i {
+.card a {
     text-decoration: none;
     font-size: 25px;
     color: #fff;
 }
 
-.card:hover {
-    transform: scale(1.05);
-    background-color: #3E8E41;
+.card a:hover {
+    color: #FFD700;
 }
 
 /* Animations */
