--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
+/* body {
     background-color: #f3f3f3;
     text-align: center;
     padding: 20px;
@@ -13,11 +12,11 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-}
+} */
 
-button:hover {
+/* button:hover {
     background-color: #0056b3;
-}
+} */
 
 .hidden {
     display: none;
@@ -51,3 +50,16 @@ button:hover {
     display: flex;
     justify-content: space-between;
 }
+
+/* .hiddenForm {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    padding: 20px;
+    animation: fadeIn 0.5s ease-in-out;
+} */
