--- a/css/viewIncome.css
+++ b/css/viewIncome.css
@@ -113,6 +113,7 @@ body {
     border: none;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 1s ease-in-out;
 }
 
 .analyzeContainer {
