--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,9 @@
-/* body {
-    background-color: #f3f3f3;
+h1 {
+    margin: 40px;
+    padding: 0 20px 30px 20px;
+    font-size: 150px;
     text-align: center;
-    padding: 20px;
+    background-image: url("./images/coconut-still-life.jpg");
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
-
-button {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-} */
-
-/* button:hover {
-    background-color: #0056b3;
-} */
-
-.hidden {
-    display: none;
-}
-
-#formContainer {
-    margin: 20px auto;
-    max-width: 400px;
-    padding: 20px;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-}
-
-#hiddenForm label {
-    display: block;
-    margin: 10px 0 5px;
-    font-weight: bold;
-}
-
-#hiddenForm input, 
-#hiddenForm textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#hiddenForm .buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* .hiddenForm {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    padding: 20px;
-    animation: fadeIn 0.5s ease-in-out;
-} */
