--- a/css/manageOrders.css
+++ b/css/manageOrders.css
@@ -169,6 +169,14 @@ body {
     width: 80px;
 }
 
+.fa-edit {
+    color: #4CAF50;
+}
+
+.fa-trash {
+    color: red;
+}
+
 /* quick action cards */
 .quick {
     display: flex;
