Finished buyers management page

--- a/css/buyersManagement.css
+++ b/css/buyersManagement.css
@@ -84,7 +84,7 @@ body {
     margin-left: 60px;
 }
 
-/* Topbar Styling */
+/* Top-bar Styling */
 .topbar {
     display: flex;
     align-items: center;
