--- a/css/product-details.css
+++ b/css/product-details.css
@@ -80,7 +80,7 @@ body {
 }
 
 .purchase-button:hover {
-    background-color: #8B4513;
+    background-color: #3E8E41;
     transform: scale(1.05);
 }
 
