--- a/css/register.css
+++ b/css/register.css
@@ -128,7 +128,7 @@ button {
 }
 
 button:hover {
-    background-color: #8B4513;
+    background-color: #3e8341;
     transform: translateY(-5px);
 }
 
