--- a/css/manageMessages.css
+++ b/css/manageMessages.css
@@ -185,7 +185,7 @@ body {
     justify-content: space-between;
 }
 
-.quickH2, .displaySuppliersH2 {
+.quickH2, .displayH2 {
     font-size: 24px;
     color: #8B4513;
     margin-bottom: 20px;
