--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* Import Poppins font */
+/* index.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body, a {
@@ -20,91 +20,76 @@ body, a {
 
 .hero-text {
     position: absolute;
-    top: 28%;
+    top: 20%;
     right: 50px;
     transform: translateY(-50%);
     color: #fff;
     text-align: right;
 }
 
-.hero-text h2 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
+.hero-text h2, .hero-text p, .btn-primary {
     opacity: 0;
-    animation: slideIn 1s ease-out forwards;
+    animation: fadeIn 1s ease-out forwards;
+}
+
+.hero-text h2 {
     animation-delay: 0.5s;
 }
 
 .hero-text p {
-    color: #fff;
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-    opacity: 0;
-    animation: slideIn 1s ease-out forwards;
     animation-delay: 1s;
 }
 
 .btn-primary {
-    display: inline-block;
-    padding: 10px 20px;
+    animation-delay: 1.5s;
     background-color: #4CAF50;
     color: #fff;
+    padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     font-size: 1rem;
-    opacity: 0;
-    animation: slideIn 1s ease-out forwards;
-    animation-delay: 1.5s;
-}
-
-@keyframes slideIn {
-    0% {
-        transform: translateX(50px);
-        opacity: 0;
-    }
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
 }
 
 .btn-primary:hover {
     background-color: #218838;
     font-size: 1.09rem;
-    transition: 0.5s ease-out;
+    transition: 0.3s ease-in-out;
 }
 
 .info {
     margin-left: 25px;
     margin-right: 25px;
+    margin-top: -100px;
 }
 
-.info h2 {
-    font-size: 30px;
+.info h2, .info p {
+    margin: 10px 0;
 }
 
 .info-cards {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .card {
-    border-radius: 10px;
-    padding: 30px 20px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    flex: 1;
     text-align: center;
-    margin: 0 20px;
-    transition: transform 1.5s ease;
+    padding: 30px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    transition: transform 1.5s ease-in-out;
 }
 
 .card img {
     width: 250px;
     border-radius: 5px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .card:hover {
-    transform: scale(1.08);
+    transform: scale(1.03);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
