--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,7 @@
     margin: auto;
 }
 
+/* logo */
 .header .logo h1 a {
     color: #fff;
     text-shadow: 0px 2px 4px rgba(44, 223, 47, 0.53);
@@ -34,6 +35,7 @@
     padding-top: 20px;
 }
 
+/* nav bar */
 .header .nav-links a {
     color: #fff;
     text-decoration: none;
@@ -53,11 +55,12 @@
     margin-left: 20px;
 }
 
-.header .mode-switch {
+.header {
     display: flex;
     align-items: center;
 }
 
+/* buttons */
 .header #hLogin, .header #hLSignup {
     font-size: 16px;
     padding: 10px;
@@ -86,4 +89,27 @@
 .header #hLSignup:hover {
     background-color: #FFD700;
     color: #4CAF50;
+}
+
+/* sign out */
+.logout button {
+    font-size: 16px;
+    font-weight: bold;
+    background: linear-gradient(to bottom, #4caf4fed, rgba(76, 175, 79, 0));
+    top: 10px;
+    padding: 4px 20px;
+    border: 2px solid #fff;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.logout a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.logout a:hover {
+    color: #FFD700;
+    text-decoration: none;
+    transition: color 0.3s;
 }
