--- a/css/login.css
+++ b/css/login.css
@@ -121,7 +121,7 @@ button {
   cursor: pointer;
   transition: background-color 0.3s ease;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
@@ -148,4 +148,10 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+.error {
+  color: red;
+  font-size: 13px;
+  margin-bottom: 10px;
 }
