--- a/css/index.css
+++ b/css/index.css
@@ -33,10 +33,18 @@ body, a {
 }
 
 .hero-text h2 {
+    font-size: 30px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     animation-delay: 0.5s;
 }
 
 .hero-text p {
+    margin-top: 0;
+    padding-top: 0;
+    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    opacity: 60%;
     animation-delay: 1s;
 }
 
@@ -44,15 +52,16 @@ body, a {
     animation-delay: 1.5s;
     background-color: #4CAF50;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 50px;
     font-size: 1rem;
+    text-align: center;
 }
 
 .btn-primary:hover {
     background-color: #218838;
-    font-size: 1.09rem;
+    font-size: 1.05rem;
     transition: 0.3s ease-in-out;
 }
 
